--- a/package.json
+++ b/package.json
@@ -1,9 +1,23 @@
 {
-  "dependencies": {
-    "axios": "^0.27.2",
-    "chalk": "^4.1.2",
-    "figlet": "^1.5.2",
-    "md5": "^2.3.0",
-    "xml-js": "^1.6.11"
-  }
+    "dependencies": {
+        "axios": "^0.27.2",
+        "chalk": "^4.1.2",
+        "colors": "^1.4.0",
+        "express": "^4.18.1",
+        "http-proxy": "^1.18.1",
+        "md5": "^2.3.0",
+        "readline-sync": "^1.4.10",
+        "util": "^0.12.4",
+        "xml-js": "^1.6.11"
+    },
+    "name": "market-monit",
+    "description": "Pixel Starships market monitoring tool by architelos#6702 - Use at your own discretion.",
+    "version": "1.0.0",
+    "main": "index.js",
+    "devDependencies": {},
+    "scripts": {
+        "recompile": "echo Recompiling! && node update.js && pkg index.js -t node18-win-x64"
+    },
+    "author": "architelos#6702",
+    "license": "MIT"
 }
